# sy.py

./: .gitignore  README.md  main.py  requirements.txt  vector.py
cp/codeforces/: 2043_B.py
cp/notes/: README.md
envertor/: README.md  pyproject.toml
envertor/envertor/: __init__.py  cli.py  core.py
envertor/tests/: test_basic.py
fastapi/: threadpool_example.py
fluent-python/: .shallow_copy_demo.py.swp  Python_Data_Model_&_Composition.md  shallow_copy_demo.py  tuple.md
nlp/: ngram_exp.py
pytorch/: README.md  pytorch_1hr.ipynb
pytorch/Pytorch-how-and-when-to-use-Module-Sequential-ModuleList-and-ModuleDict/: .README.md.un~  README.md  sample.py
pytorch/pytorch_tutorials/: pytorch_01.ipynb
